--- a/Serviços.html
+++ b/Serviços.html
@@ -2,9 +2,11 @@
 <html lang="pt-br">
 
 <head>
+
     <meta charset="UTF-8">
     <title>Serviços</title>
     <link rel="stylesheet" href="./style.css">
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
 </head>
 
@@ -96,5 +98,38 @@
         </section>
 </main>
 
+
+
+
+<footer class="footer-distributed">
+
+    <div class="footer-right">
+  
+      <a href="https://www.facebook.com/hashtag/bemestaresaude"><i class="fa fa-facebook"></i></a>
+      <a href="https://twitter.com/hashtag/bemestar?src=hashtag_click"><i class="fa fa-twitter"></i></a>
+      <a href="https://www.instagram.com/explore/tags/saudeebemestar/"><i class="fa fa-instagram"></i></a>
+     
+  
+    </div>
+  
+    <div class="footer-left">
+  
+      <p class="footer-links">
+  
+  
+  
+        <a href="#">Inicio</a>
+  
+        <a href="#">Serviços</a>
+  
+        <a href="#">Sobre</a>
+  
+        <a href="#">Contato</a>
+      </p>
+  
+      <p>HEALTH LIFE&copy;</p>
+    </div>
+  
+    <script src="https://kit.fontawesome.com/b1670abc0a.js" crossorigin="anonymous"></script>
 </body>
 </html>
